--- a/GTG/gtk/preferences.glade
+++ b/GTG/gtk/preferences.glade
@@ -150,58 +150,31 @@
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">none</property>
                     <child>
-                      <object class="GtkAlignment" id="alignment1">
+                      <object class="GtkAlignment" id="prefs-alignment1">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="yalign">0.50999999046325684</property>
+                        <property name="bottom_padding">15</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkAlignment" id="prefs-alignment1">
+                          <object class="GtkVBox" id="prefs-vbox4">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="bottom_padding">15</property>
-                            <property name="left_padding">12</property>
                             <child>
-                              <object class="GtkVBox" id="prefs-vbox4">
+                              <object class="GtkFontButton" id="fontbutton1">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <child>
-                                  <object class="GtkPaned" id="paned1">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <child>
-                                      <object class="GtkLabel" id="label5">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">Font Type</property>
-                                      </object>
-                                      <packing>
-                                        <property name="resize">False</property>
-                                        <property name="shrink">True</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkFontButton" id="fontbutton1">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
-                                        <property name="use_action_appearance">False</property>
-                                        <property name="font">Sans 12</property>
-                                        <property name="preview_text"></property>
-                                        <property name="show_preview_entry">False</property>
-                                      </object>
-                                      <packing>
-                                        <property name="resize">True</property>
-                                        <property name="shrink">True</property>
-                                      </packing>
-                                    </child>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">True</property>
-                                    <property name="fill">True</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="use_action_appearance">False</property>
+                                <property name="font">Sans 12</property>
+                                <property name="preview_text"></property>
+                                <property name="show_preview_entry">False</property>
                               </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
                             </child>
                           </object>
                         </child>
