--- a/GTG/gtk/preferences.glade
+++ b/GTG/gtk/preferences.glade
@@ -163,12 +163,10 @@
                             <child>
                               <object class="GtkFontButton" id="fontbutton1">
                                 <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="receives_default">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="receives_default">False</property>
                                 <property name="use_action_appearance">False</property>
-                                <property name="font">Sans 12</property>
-                                <property name="preview_text"></property>
-                                <property name="show_preview_entry">False</property>
+                                <signal name="font-set" handler="on_fontbutton1_font_set" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="expand">True</property>
