--- a/GTG/gtk/backends_dialog.glade
+++ b/GTG/gtk/backends_dialog.glade
@@ -115,27 +115,18 @@
                 </child>
                 <child>
                   <object class="GtkScrolledWindow" id="central_pane_window">
-                    <property name="width_request">450</property>
+                    <property name="width_request">480</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="vadjustment">adjustment1</property>
                     <property name="hscrollbar_policy">automatic</property>
                     <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <object class="GtkViewport" id="central_pane1">
+                      <object class="GtkViewport" id="central_pane">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="resize_mode">queue</property>
                         <child>
-                          <object class="GtkAlignment" id="central_pane">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="left_padding">10</property>
-                            <property name="right_padding">10</property>
-                            <child>
-                              <placeholder/>
-                            </child>
-                          </object>
+                          <placeholder/>
                         </child>
                       </object>
                     </child>
