--- a/GTG/gtk/editor/taskeditor.glade
+++ b/GTG/gtk/editor/taskeditor.glade
@@ -168,6 +168,8 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="startingdate_changed"/>
+                    <signal name="focus-out-event" handler="startdate_entry_focus_out"/>
+                    <signal name="activate" handler="startdate_entry_activate"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -225,6 +227,8 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="duedate_changed"/>
+                    <signal name="focus-out-event" handler="duedate_entry_focus_out"/>
+                    <signal name="activate" handler="duedate_entry_activate"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -282,6 +286,8 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="closeddate_changed"/>
+                    <signal name="focus-out-event" handler="closeddate_entry_focus_out"/>
+                    <signal name="activate" handler="closeddate_entry_activate"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
